
= rufus-lua CHANGELOG.txt


== rufus-lua - 1.1.0    not yet released

- issue #3 : passing false from Ruby to Lua twists it to true. (Scott)
- issue #1 : ruby function return array not OK. Fixed. (Thanks Scott Persinger)


== rufus-lua - 1.0.0    released 2009/03/27

- automatically creates lib table when defined Ruby function (callback)
- implemented #[]=, #objlen and #size for table
- fixed bug when pushing floats on the stack (float --> double)
- added State#function for defining Ruby functions (callbacks) available via Lua


== rufus-lua - 0.1.0    released 2009/03/16

- initial release
